--- a/frontend/styles/output.css
+++ b/frontend/styles/output.css
@@ -264,9 +264,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -281,6 +278,9 @@
   }
   .top-3\/4 {
     top: calc(3/4 * 100%);
+  }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
   }
   .top-6 {
     top: calc(var(--spacing) * 6);
@@ -302,12 +302,6 @@
   }
   .top-28 {
     top: calc(var(--spacing) * 28);
-  }
-  .top-32 {
-    top: calc(var(--spacing) * 32);
-  }
-  .top-40 {
-    top: calc(var(--spacing) * 40);
   }
   .top-42 {
     top: calc(var(--spacing) * 42);
@@ -339,20 +333,8 @@
   .right-10 {
     right: calc(var(--spacing) * 10);
   }
-  .right-12 {
-    right: calc(var(--spacing) * 12);
-  }
-  .right-14 {
-    right: calc(var(--spacing) * 14);
-  }
   .right-56 {
     right: calc(var(--spacing) * 56);
-  }
-  .right-\[70\%\] {
-    right: 70%;
-  }
-  .right-\[75\.5px\] {
-    right: 75.5px;
   }
   .-bottom-16 {
     bottom: calc(var(--spacing) * -16);
@@ -395,9 +377,6 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -625,10 +604,6 @@
     width: calc(var(--spacing) * 0);
     height: calc(var(--spacing) * 0);
   }
-  .size-1 {
-    width: calc(var(--spacing) * 1);
-    height: calc(var(--spacing) * 1);
-  }
   .size-1\/2 {
     width: calc(1/2 * 100%);
     height: calc(1/2 * 100%);
@@ -761,9 +736,6 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -772,9 +744,6 @@
   }
   .w-2xl {
     width: var(--container-2xl);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -790,9 +759,6 @@
   }
   .w-28 {
     width: calc(var(--spacing) * 28);
-  }
-  .w-36 {
-    width: calc(var(--spacing) * 36);
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
@@ -845,9 +811,6 @@
   .w-xs {
     width: var(--container-xs);
   }
-  .max-w-3 {
-    max-width: calc(var(--spacing) * 3);
-  }
   .max-w-3\/4 {
     max-width: calc(3/4 * 100%);
   }
@@ -857,14 +820,8 @@
   .max-w-5xl {
     max-width: var(--container-5xl);
   }
-  .max-w-9 {
-    max-width: calc(var(--spacing) * 9);
-  }
   .max-w-9\/12 {
     max-width: calc(9/12 * 100%);
-  }
-  .max-w-11 {
-    max-width: calc(var(--spacing) * 11);
   }
   .max-w-11\/12 {
     max-width: calc(11/12 * 100%);
@@ -899,9 +856,6 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-grow {
-    flex-grow: 1;
-  }
   .grow {
     flex-grow: 1;
   }
@@ -920,33 +874,13 @@
   .table-fixed {
     table-layout: fixed;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[120\%\] {
-    --tw-translate-x: 120%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-3 {
-    --tw-translate-y: calc(var(--spacing) * -3);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-3\/4 {
@@ -961,8 +895,12 @@
     --tw-translate-y: calc(var(--spacing) * -56);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * 1);
+  .-translate-y-\[150\%\] {
+    --tw-translate-y: calc(150% * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-full {
+    --tw-translate-y: -100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-1\/2 {
@@ -977,12 +915,12 @@
     --tw-translate-y: calc(1/4 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-3 {
-    --tw-translate-y: calc(var(--spacing) * 3);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-y-3\/4 {
     --tw-translate-y: calc(3/4 * 100%);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[8\%\] {
+    --tw-translate-y: 8%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-full {
@@ -1033,9 +971,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .auto-rows-auto {
     grid-auto-rows: auto;
@@ -1228,9 +1163,6 @@
   }
   .border-slate-400 {
     border-color: var(--color-slate-400);
-  }
-  .border-slate-500 {
-    border-color: var(--color-slate-500);
   }
   .border-slate-500\/25 {
     border-color: color-mix(in oklab, var(--color-slate-500) 25%, transparent);
@@ -1492,14 +1424,8 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
-  .text-\[5px\] {
-    font-size: 5px;
-  }
   .text-\[6px\] {
     font-size: 6px;
-  }
-  .text-\[7px\] {
-    font-size: 7px;
   }
   .text-\[8px\] {
     font-size: 8px;
@@ -1642,17 +1568,11 @@
   .outline-slate-500 {
     outline-color: var(--color-slate-500);
   }
-  .outline-slate-600 {
-    outline-color: var(--color-slate-600);
-  }
   .outline-slate-600\/50 {
     outline-color: color-mix(in oklab, var(--color-slate-600) 50%, transparent);
   }
   .blur {
     --tw-blur: blur(8px);
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
@@ -2398,21 +2318,6 @@
       top: calc(1/4 * 100%);
     }
   }
-  .xl\:top-10 {
-    @media (width >= 80rem) {
-      top: calc(var(--spacing) * 10);
-    }
-  }
-  .xl\:top-16 {
-    @media (width >= 80rem) {
-      top: calc(var(--spacing) * 16);
-    }
-  }
-  .xl\:top-20 {
-    @media (width >= 80rem) {
-      top: calc(var(--spacing) * 20);
-    }
-  }
   .xl\:top-28 {
     @media (width >= 80rem) {
       top: calc(var(--spacing) * 28);
@@ -2423,79 +2328,9 @@
       top: calc(var(--spacing) * 32);
     }
   }
-  .xl\:right-\[25px\] {
-    @media (width >= 80rem) {
-      right: 25px;
-    }
-  }
-  .xl\:right-\[28px\] {
-    @media (width >= 80rem) {
-      right: 28px;
-    }
-  }
-  .xl\:right-\[32px\] {
-    @media (width >= 80rem) {
-      right: 32px;
-    }
-  }
-  .xl\:right-\[33px\] {
-    @media (width >= 80rem) {
-      right: 33px;
-    }
-  }
-  .xl\:right-\[34px\] {
-    @media (width >= 80rem) {
-      right: 34px;
-    }
-  }
-  .xl\:right-\[35px\] {
-    @media (width >= 80rem) {
-      right: 35px;
-    }
-  }
-  .xl\:right-\[38px\] {
-    @media (width >= 80rem) {
-      right: 38px;
-    }
-  }
-  .xl\:right-\[40px\] {
-    @media (width >= 80rem) {
-      right: 40px;
-    }
-  }
-  .xl\:right-\[48\.5px\] {
-    @media (width >= 80rem) {
-      right: 48.5px;
-    }
-  }
-  .xl\:right-\[48px\] {
-    @media (width >= 80rem) {
-      right: 48px;
-    }
-  }
   .xl\:right-\[49\.5px\] {
     @media (width >= 80rem) {
       right: 49.5px;
-    }
-  }
-  .xl\:right-\[49px\] {
-    @media (width >= 80rem) {
-      right: 49px;
-    }
-  }
-  .xl\:right-\[50px\] {
-    @media (width >= 80rem) {
-      right: 50px;
-    }
-  }
-  .xl\:right-\[60px\] {
-    @media (width >= 80rem) {
-      right: 60px;
-    }
-  }
-  .xl\:right-\[70px\] {
-    @media (width >= 80rem) {
-      right: 70px;
     }
   }
   .xl\:-bottom-28 {
@@ -2873,11 +2708,6 @@
       right: 75.5px;
     }
   }
-  .\32 xl\:-bottom-\[335\%\] {
-    @media (width >= 96rem) {
-      bottom: calc(335% * -1);
-    }
-  }
   .\32 xl\:w-5\/6 {
     @media (width >= 96rem) {
       width: calc(5/6 * 100%);
@@ -2896,18 +2726,6 @@
   .\32 xl\:w-auto {
     @media (width >= 96rem) {
       width: auto;
-    }
-  }
-  .\32 xl\:translate-x-\[120\%\] {
-    @media (width >= 96rem) {
-      --tw-translate-x: 120%;
-      translate: var(--tw-translate-x) var(--tw-translate-y);
-    }
-  }
-  .\32 xl\:-translate-y-3\/4 {
-    @media (width >= 96rem) {
-      --tw-translate-y: calc(calc(3/4 * 100%) * -1);
-      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
   .\32 xl\:text-xs {
